--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,31 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.navbar {
+  display: flex;
+  font-size: 1.5rem;
+  flex-direction: row-reverse;
+  padding: 15px 0px;
+  justify-content: space-between;
+  border-bottom: 2px dotted black;
+  align-items: flex-end;
+}
+.navbar nav {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  color: black;
+  text-decoration: none;
+}
+.navbar nav a {
+  color: black;
+  text-decoration: none;
+}
+.navbar .funbus {
+  display: flex;
+  font-size: 2.4rem;
+  font-family: 'Indie Flower', cursive;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
