--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,16 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+header .buspic {
+  padding-bottom: 1.6rem;
+}
+header h1 {
+  padding-bottom: 2rem;
+}
+header p {
+  border-bottom: 2px dotted black;
+  padding-bottom: 2rem;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
