--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,19 @@
+header {
+
+  .buspic {
+    padding-bottom: 1.6rem;
+  }
+
+  h1 {
+    padding-bottom: 2rem;
+  }
+
+  p {
+    border-bottom: 2px dotted black;
+    padding-bottom: 2rem;
+  }
+}
+
 .home {
 
   .content-section {
