--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+button {
+  display: flex;
+  background-color: #006667;
+  width: 80%;
+  border-radius: 10px;
+  color: white;
+  height: 4rem;
+  justify-content: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
